<resources>
    <string name="app_name">PotterPortal</string>
    <string name="AlarmOff">Alarm turned off.</string>
    <string name="AlarmSet">Alarm has been set.</string>
    <string name="enter_assessment_title">Enter Assessment title</string>
    <string name="select_your_course">Select Your Course</string>
    <string name="select_assessment_type">Select Assessment Type</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="start_date">Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="end_date">End Date</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="hogwartslogo">HogwartsLogo</string>
    <string name="enter_a_term_name">Enter a Term Name</string>
    <string name="add_term">Add Term</string>
    <string name="title">Title</string>
    <string name="assessment_id">Assessment ID:</string>
    <string name="course">Course</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="set_an_alarm">set an Alarm</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="text_is_broken">Text is Broken</string>
    <string name="add_an_assessment">Add an Assessment</string>
    <string name="course_add_page">Course Add Page</string>
    <string name="course_name">course name</string>
    <string name="termselect">termSelect</string>
    <string name="mentorselect">mentorSelect</string>
    <string name="coursestatus">courseStatus</string>
    <string name="startdate">startDate</string>
    <string name="enddate">endDate</string>
    <string name="add_course">Add Course</string>
    <string name="if_you_would_like_to_create_a_new_term_you_can_do_so_from_the_terms_page">If you would like to create a new term, You can do so from the Terms page.</string>
    <string name="if_you_would_like_to_add_a_new_mentor_you_can_do_so_from_the_mentors_page">If you would like to add a new Mentor, you can do so from the Mentors page.</string>
    <string name="course_details">Course Details</string>
    <string name="course_notes">Course Notes</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="mentor_details">Mentor Details</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="edit_course">Edit Course</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_course">Delete Course</string>
    <string name="turn_off_alarm">Turn Off Alarm</string>
    <string name="add_a_course">Add a Course</string>
    <string name="student_portal">Student Portal</string>
    <string name="terms_image">terms image</string>
    <string name="terms">Terms</string>
    <string name="course_image">course image</string>
    <string name="courses">Courses</string>
    <string name="assessment_image">assessment image</string>
    <string name="assessments">Assessments</string>
    <string name="mentor_image">mentor image</string>
    <string name="mentors">Mentors</string>
    <string name="name">Name</string>
    <string name="mentor_phone">Mentor Phone</string>
    <string name="mentor_email">Mentor Email</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="add_a_new_mentor">Add A New Mentor</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="delete_mentor">Delete Mentor</string>
    <string name="this_mentor_teaches_the_following_courses">This Mentor Teaches the following courses</string>
    <string name="add_a_mentor">Add a Mentor</string>
    <string name="add_note">Add Note</string>
    <string name="add_a_title">Add a Title</string>
    <string name="type_your_note_here">Type Your Note Here</string>
    <string name="save_note">Save Note</string>
    <string name="back_to_course">Back to Course</string>
    <string name="add_a_note_to_this_course">Add a Note to this course</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="your_message">your message</string>
    <string name="send_text">Send Text</string>
    <string name="delete_note">Delete Note</string>
    <string name="termname">TermName</string>
    <string name="courses_this_term">Courses This Term</string>
    <string name="delete_term">Delete Term</string>
    <string name="add_a_term">Add a term</string>
</resources>