<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.CourseDetail">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hogwarts_logo"
        android:contentDescription="@string/hogwartslogo" />

    <TextView
        android:id="@+id/textView2625"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_details"
        android:layout_margin="15sp"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/courseNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/textView2625"
        android:layout_margin="20sp"
        android:hint="@string/course_name"
        android:autofillHints=""
        android:inputType="text" />

    <TextView
        android:id="@+id/tvaldkfj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/course_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseNameET" />

    <Button
        android:id="@+id/termNameSpnrBTN"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/termselect"
        app:layout_constraintTop_toBottomOf="@id/tvaldkfj"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20sp"
        android:textColor="@color/black"
        style = "?spinnerStyle"/>

    <Button
        android:id="@+id/mentorNameSpnrBTN"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/mentorselect"
        app:layout_constraintTop_toBottomOf="@id/termNameSpnrBTN"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20sp"
        android:textColor="@color/black"
        style = "?spinnerStyle"/>

    <Button
        android:id="@+id/courseStatusSpnrBTN"
        style="?spinnerStyle"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginStart="16dp"
        android:text="@string/coursestatus"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mentorNameSpnrBTN" />

    <Button
        android:id="@+id/courseNotesBTN"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:onClick="toAssociatedNotes"
        android:text="@string/course_notes"
        app:layout_constraintStart_toEndOf="@+id/termNameSpnrBTN"
        app:layout_constraintTop_toBottomOf="@+id/tvaldkfj" />

    <Button
        android:id="@+id/setCourseAlarmBTN"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/set_alarm"
        app:layout_constraintStart_toEndOf="@+id/courseStatusSpnrBTN"
        app:layout_constraintTop_toBottomOf="@+id/mentorNameSpnrBTN" />

    <Button
        android:id="@+id/professorDetails"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/mentor_details"
        app:layout_constraintStart_toEndOf="@+id/mentorNameSpnrBTN"
        app:layout_constraintTop_toBottomOf="@+id/termNameSpnrBTN" />


    <Button
        android:id="@+id/invisibleDeleteAlarmBTN"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/delete_alarm"
        app:layout_constraintStart_toEndOf="@id/mentorNameSpnrBTN"
        app:layout_constraintTop_toBottomOf="@id/courseNotesBTN"
        android:visibility="gone"/>

    <Button
        android:id="@+id/courseStartDateSelector"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        app:layout_constraintTop_toBottomOf="@id/courseStatusSpnrBTN"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20sp"
        android:textColor="@color/black"
        style="?spinnerStyle"/>

    <Button
        android:id="@+id/courseEndDateSelector"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        app:layout_constraintTop_toBottomOf="@id/courseStartDateSelector"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20sp"
        android:textColor="@color/black"
        style = "?spinnerStyle"/>

    <TextView
        android:id="@+id/courseAlarmNotificationTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/text_is_broken"
        android:textSize="20sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/editCourseBTN"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_course"
        app:layout_constraintStart_toEndOf="@+id/courseEndDateSelector"
        app:layout_constraintTop_toBottomOf="@+id/courseStartDateSelector"
        android:layout_margin="20sp"/>

    <Button
        android:id="@+id/invisibleSaveChangesBTN"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        app:layout_constraintStart_toEndOf="@+id/courseEndDateSelector"
        app:layout_constraintTop_toBottomOf="@+id/courseStartDateSelector"
        android:layout_margin="20sp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/invisibleCancelChangesBTN"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@+id/courseEndDateSelector"
        app:layout_constraintTop_toBottomOf="@+id/courseEndDateSelector"
        android:visibility="gone"/>

    <Button
        android:id="@+id/deleteCourseBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_course"
        app:layout_constraintBottom_toTopOf="@+id/courseAlarmNotificationTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>