<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.AddTermActivity"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hogwarts_logo"
        android:contentDescription="@string/hogwartslogo" />

    <EditText
        android:id="@+id/termNameInput"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/enter_a_term_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/termStartSelectBTN"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/select_start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termNameInput"
        />

    <TextView
        android:layout_width="75sp"
        android:layout_height="50sp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/start_date"
        app:layout_constraintTop_toBottomOf="@id/termNameInput"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/termEndSelectBTN"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/select_end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termStartSelectBTN"
        />

    <TextView
        android:layout_width="75sp"
        android:layout_height="50sp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/end_date"
        app:layout_constraintTop_toBottomOf="@id/termStartSelectBTN"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/addTermBTN"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintTop_toBottomOf="@id/termEndSelectBTN"
        android:layout_margin="50sp"
        android:text="@string/add_term"
        />


</androidx.constraintlayout.widget.ConstraintLayout>