<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.AddAssessmentActivity"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hogwarts_logo"
        android:contentDescription="@string/hogwartslogo" />

    <EditText
        android:id="@+id/assessmentTitleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="text"
        android:hint="@string/enter_assessment_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:autofillHints="" />

    <Button
        android:id="@+id/courseSelectBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/assessmentTitleInput"
        android:text="@string/select_your_course"
        android:textColor="@color/black"
        android:gravity="center"
        style="?spinnerStyle"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/typeSelectBTN"
        style="?spinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/select_assessment_type"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/courseSelectBTN"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/startSelectBTN"
        style="?spinnerStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/select_start_date"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeSelectBTN"

        />

    <TextView
        android:layout_width="75dp"
        android:layout_height="50sp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/start_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/startSelectBTN"
        app:layout_constraintTop_toBottomOf="@id/typeSelectBTN" />

    <Button
        android:id="@+id/endSelectBTN"
        style="?spinnerStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/select_end_date"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startSelectBTN"

        />

    <TextView
        android:layout_width="75dp"
        android:layout_height="50sp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/end_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/endSelectBTN"
        app:layout_constraintTop_toBottomOf="@id/startSelectBTN" />

    <Button
        android:id="@+id/submitAssessment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/endSelectBTN"
        android:text="@string/add_assessment"
        android:layout_margin="75dp"
        android:onClick="addAssessmentToDatabase"
        />
</androidx.constraintlayout.widget.ConstraintLayout>