<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.NoteAdd">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hogwarts_logo"
        android:contentDescription="@string/hogwartslogo" />

    <TextView
        android:id="@+id/addNotePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_note"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_margin="15sp"/>

    <EditText
        android:id="@+id/noteTitleET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addNotePage"
        android:layout_margin="20sp"
        android:gravity="center"
        android:hint="@string/add_a_title"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/noteContentET"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20sp"
        android:gravity="top"
        android:hint="@string/type_your_note_here"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/noteTitleET"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/saveNoteBTN"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteContentET"
        android:layout_margin="20sp"
        android:text="@string/save_note"/>

    <Button
        android:id="@+id/cancelNote"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteContentET"
        android:layout_margin="20sp"
        android:text="@string/cancel"/>


</androidx.constraintlayout.widget.ConstraintLayout>