<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.TermDetails">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hogwarts_logo"
        android:contentDescription="@string/hogwartslogo" />

    <TextView
        android:id="@+id/termNameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/termname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        />

    <TextView
        android:id="@+id/termStartDateTV"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="start"
        android:text="@string/startdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termNameTV"
        />

    <TextView
        android:id="@+id/termEndDateTV"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="end"
        android:text="@string/enddate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termNameTV"
        />

    <TextView
        android:id="@+id/classListTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/courses_this_term"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/termEndDateTV"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/associatedClassesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15sp"
        app:layout_constraintBottom_toTopOf="@+id/deleteTermButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classListTV" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/toAddCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15sp"
        app:srcCompat="@drawable/add"
        android:contentDescription="@string/add_a_course" />

    <Button
        android:id="@+id/deleteTermButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:text="@string/delete_term"
        app:layout_constraintBottom_toTopOf="@+id/toAddCourse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>